fix: redirect to Index when success customer deleted

--- a/Views/Customer/Index.cshtml
+++ b/Views/Customer/Index.cshtml
@@ -137,7 +137,7 @@
                     url: UrlHandler, 
                     type: 'POST',
                     success: function() {
-                        location.href = '/Customer';
+                        window.location.href = '/Customer';
                     }
                 });
             });
