feat: add description of system

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Cadastro de clientes</h1>
+    <p>
+        O sistema de cadastro de clientes apresenta um conjunto completo de funcionalidades CRUD (Create, Read, Update, Delete), permitindo aos usuários realizar todas as operações essenciais de gerenciamento de clientes. Essas funcionalidades são implementadas com regras internas de validações, garantindo a consistência e a integridade dos dados.
+    </p>
 </div>
